# enuwatch2

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  design.md  details.md  readme  test_synth_random.py
enu/: CMakeLists.txt  argparser.cpp  argparser.h  daemon.h  fsevent.cpp  inotify.cpp  log.cpp  main.cpp  net.h  spawn.cpp  spawn.h
src/: CMakeLists.txt  argparser.cpp  argparser.h  base.h  daemon.h  fsevent.cpp  log.cpp  log.h  main.cpp  progress.h  sequencer.h  shm.h  spawn.cpp  spawn.h  tracked.h  tree_progress.cpp  tree_progress.h  watcher.h
test/: CMakeLists.txt  spawn.cpp
